# chronos

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: vlc_image.yaml
crates/: README.md
crates/crypto/: Cargo.toml
crates/crypto/src/: recovery.rs
crates/enclaves/: Cargo.toml
crates/enclaves/src/: lib.rs  nitro_secure.rs
crates/gossip/: Cargo.toml
crates/gossip/src/: discovery.rs  lib.rs  network.rs  peer_manager.rs
crates/hlc/: Cargo.toml
crates/hlc/src/: lib.rs
crates/hvlc/: Cargo.toml
crates/hvlc/src/: lib.rs
crates/protos/: build.rs
crates/protos/src/: bussiness.proto  bussiness.rs  innermsg.proto  innermsg.rs  lib.rs  vlc.proto  vlc.rs  zmessage.proto  zmessage.rs  zp2p.proto  zp2p.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
crates/vlc/: Cargo.toml
crates/vlc/src/: lib.rs  ordinary_clock.rs
crates/vrf/: Cargo.toml
crates/vrf/src/: ecvrf.rs  lib.rs  sample.rs  traits.rs
crates/vrf/src/unit_tests/: vrf_test.rs
demos/: README.md
demos/coll-tx/src/: simple_utxo.rs
demos/coll_tx/: Cargo.toml
demos/tee_vlc/: Cargo.toml  README.md
demos/tee_vlc/src/: main.rs  nitro_clock.rs
demos/test_conflict/src/: lib.rs
demos/test_vlc_net/: Cargo.toml  README.md
demos/test_vlc_net/scripts/: multi_node_test.sh  watch_dog.py
demos/test_vlc_net/src/: main.rs  server.rs
demos/vlc-dag/: Cargo.toml
demos/vlc-dag/src/: lib.rs
demos/vlc_dag/: Cargo.toml
demos/vlc_dag/src/db_client/: lldb_client.rs  lldb_test.rs
docs/: README.md
docs/applied/: vlc and application brief description.md
src/: lib.rs
zchronod/: README.md  config-tempelete.yaml
zchronod/db_sql/: Cargo.toml
zchronod/db_sql/src/: db_api.rs  lib.rs  raw_db.rs
zchronod/db_sql/src/pg/: pg_client.rs
zchronod/db_sql/src/pg/entities/: bussiness_clocks.rs  clock_infos.rs  merge_logs.rs  mod.rs  prelude.rs  z_messages.rs
zchronod/db_sql/src/pg/migrator/: m20240428_000001_create_clock_infos_table.rs  m20240428_000001_create_merge_logs_table.rs  m20240428_000002_create_merge_logs_table.rs  m20240517_000003_create_zmessages_table.rs  m20240529_000004_create_business_clocks_table.rs  mod.rs
zchronod/node_api/: Cargo.toml
zchronod/node_api/src/: config.rs  error.rs
zchronod/tools/: Cargo.toml
zchronod/tools/src/: helper.rs  lib.rs  tokio_zchronod.rs
zchronod/zchronod/: Cargo.toml
zchronod/zchronod/src/: handler.rs  lib.rs  main.rs  node_factory.rs  storage.rs  vlc.rs  zchronod.rs
zchronod/zchronod/src/api/: read.rs  response.rs  write.rs
