[package]
name = "chronos"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "crates/accumulator",
    "crates/vlc",
    "crates/hlc",
    "crates/cops",
    "crates/vrf",
    "crates/crypto",
    "crates/enclaves",
    "crates/gossip",
    "crates/types",
    "demos/test_conflict",
    "demos/coll_tx",
    "demos/vlc_dag",
    "demos/tee_vlc",
    "demos/test_vlc_net", 
]

[profile.dev]
opt-level = 1
debug = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
debug = true
lto = true
strip = true
incremental = true

[profile.bench]
debug = true

[profile.artifact]
inherits = "release"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1.74"
axum = "0.7.1"
borsh = { version = "1.2.0", features = ["derive"] }
ethnum = "1.5.0"
rand = "0.8.5"
secp256k1 = { version = "0.28.0", features = [
    "hashes",
    "rand",
    "global-context",
] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"

[lib]
name = "chronos"
path = "src/lib.rs"
