[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = "0.99.17"
derive-where = "1.2.7"
bincode = "1.3.3"
serde = { version = "1.0.195", features = ["derive"] }
schnorrkel = { version = "0.11.4", features = ["serde"] }
secp256k1 = { version = "0.29.0", features = ["rand-std", "serde", "recovery"] }
nix = { version = "0.28.0", features = ["socket", "sched", "resource"] }
serde_json = "1.0.114"
sha2 = "0.10.8"
sha3 = "0.10.1"
hex = "0.4.3"
blake2 = "0.10.6"
rand = "0.8.5"
primitive-types = { version = "0.12.2", features = ["serde"] }
anyhow = { version = "1.0.79", features = ["backtrace"] }