[package]
name = "enclaves"
version = "0.1.0"
edition = "2021"

[features]
nitro-enclaves = ["aws-nitro-enclaves-nsm-api", "aws-nitro-enclaves-attestation"]

[dependencies]
bincode = "1.3.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
anyhow = { version = "1.0.79", features = ["backtrace"] }
nix = { version = "0.28.0", features = ["socket", "sched", "resource"] }
tokio = { version = "1.35.1", features = ["net", "time", "sync", "rt", "signal", "macros", "rt-multi-thread", "fs", "process", "io-util"] }
aws-nitro-enclaves-nsm-api = { version = "0.4.0", optional = true }
aws-nitro-enclaves-attestation = { git = "https://github.com/neatsys/aws-nitro-enclaves-attestation", version = "0.1.0", optional = true }