[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto = { path = "../crypto" }
color-eyre = "0.6.2"
futures = "0.3"
ahash = "0.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
libp2p = { version = "0.54.1", features = [
    "gossipsub",
    "mdns",
    "autonat",
    'identify',
    "noise",
    "kad",
    "macros",
    "ping",
    "tcp",
    "tokio",
    'upnp',
    "yamux",
] }
multiaddr = "0.18"
libp2p-swarm-test = "0.4"
tokio = { version = "1.25.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1"
sha2 = "0.10.8"

[features]
mdns = []