[package]
name = "vlc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
sha3 = "0.10.1"
rand = "0.8.5"
rand_distr = "0.4.3"
bincode = "1.3.3"
tracing = "0.1.40"
futures = "0.3.30"
num_cpus = "1.13.1"
derive_more = "0.99.17"
derive-where = "1.2.7"
serde = { version = "1", features = ["derive"] }
anyhow = { version = "1.0.79", features = ["backtrace"] }
tracing-subscriber = "0.3.18"
secp256k1 = { version = "0.29.0", features = ["rand-std", "serde", "recovery"] }
tokio = { version = "1.35.1", features = ["net", "time", "sync", "rt", "signal", "macros", "rt-multi-thread", "fs", "process", "io-util"] }
tokio-util = "0.7.10"
crypto ={ path = "../crypto", version = "0.1.0"}
