[package]
name = "test_vlc_net"
version = "0.1.0"
edition = "2021"

[dependencies]
gossip = { path = "../../crates/gossip" }
vlc = { path = "../../crates/vlc" }
libp2p = { version = "0.54.1", features = [
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "ping",
    "tcp",
    "tokio",
    "yamux",
] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs", "io-util"] }
console-subscriber = "0.4.0"
ed25519-dalek = "2.1.1"
bincode = "1.3.3"
sha2 = "0.10.8"
base58 = "0.2.0"
base64 = "0.22"
num_cpus = "1.16.0"
sysinfo = "0.32.0"
anyhow = { version = "1.0.90", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.17", features = ["derive"] }
tracing = "0.1.40"
jemalloc_pprof = "0.6.0"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
