[package]
name = "test_vlc_net"
version = "0.1.0"
edition = "2021"

[features]
mdns = []

[dependencies]
gossip ={ path = "../../crates/gossip"}
vlc ={ path = "../../crates/vlc"}
libp2p = { version = "0.54.1", features = ["gossipsub", "mdns", "noise", "macros", "ping", "tcp", "tokio", "yamux"] }
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["fs", "io-util"] }
console-subscriber = "0.4.0"
ed25519-dalek = "2.1.1"
bincode = "1.3.3"
sha2 = "0.10.8"
base58 = "0.2.0"
base64 = "0.22"
num_cpus = "1.13.1"
anyhow = { version = "1.0.79", features = ["backtrace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.17", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
protobuf = { version = "3.5.1", optional = true }
pprof = { version = "0.13.0", features = ["cpp", "criterion", "flamegraph", "protobuf", "protobuf-codec"] }